hphp/hack/test/typecheck/construct/parent_construct1.php.exp
File "parent_construct1.php", line 36, characters 9-37:
Too few arguments (required 1 but got 0) (Typing[4104])
File "parent_construct1.php", line 15, characters 19-29:
Definition is here
